--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -1,7 +1,6 @@
 name: x86_64 OpenWrt Build
 
 on:
-  repository_dispatch:
   workflow_dispatch:
     inputs:
       lan_ip:
@@ -14,8 +13,7 @@ on:
       pppoe_pass:
         description: 'PPPoE 密码'
         required: true
-
-  
+  repository_dispatch:
 
 env:
   OPNAME: 'x86_64'                     # 项目/固件名称
@@ -38,100 +36,104 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v4       # 拉取仓库代码
+      uses: actions/checkout@v4
 
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /etc/apt/sources.list.d/*  # 清理旧源
+        sudo rm -rf /etc/apt/sources.list.d/*
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env) # 安装依赖
+        sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"   # 设置时区
+        sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /mnt/workdir
         sudo chown $USER:$GROUPS /mnt/workdir
 
     - name: Clone source code
       working-directory: /mnt/workdir
       run: |
-        git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt   # 克隆源码
-        ln -sf /mnt/workdir/openwrt $GITHUB_WORKSPACE/openwrt    # 创建软链接方便后续访问
+        git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
+        ln -sf /mnt/workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Cache
       uses: stupidloud/cachewrtbuild@main
       with:
-          ccache: 'true'  # 使用 ccache 加速编译
+          ccache: 'true'
           mixkey: 'x86'
           prefix: 'openwrt'
 
-    # ------------------------------
-    # 更新 feeds（必须先于 configure.sh 和自定义包）
     - name: Update and install feeds
       run: |
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    # 加载自定义 feeds
     - name: Load custom feeds
       run: |
         cd openwrt
         [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
         chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
-        bash $GITHUB_WORKSPACE/$SYS_CONF_SH  # 执行自定义配置脚本
+        bash $GITHUB_WORKSPACE/$SYS_CONF_SH
 
-    # 加载自定义配置和 package
     - name: Load custom configuration
       run: |
         cd openwrt
-        [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files   # 自定义 files
-        [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config  # 使用默认 .config
+        [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files
+        [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
         chmod +x $GITHUB_WORKSPACE/$PACKS
-        bash $GITHUB_WORKSPACE/$PACKS  # 安装自定义 package
+        bash $GITHUB_WORKSPACE/$PACKS
 
-    # 扩展驱动（如果 EXTEND_DRIVER = true）
+    - name: Set LAN IP and PPPoE account
+      run: |
+        mkdir -p openwrt/files/etc/uci-defaults
+        cat <<EOF > openwrt/files/etc/uci-defaults/99-set-network
+#!/bin/sh
+sed -i 's/192.168.1.1/${{ github.event.inputs.lan_ip }}/g' /etc/config/network
+uci set network.wan.proto='pppoe'
+uci set network.wan.username='${{ github.event.inputs.pppoe_user }}'
+uci set network.wan.password='${{ github.event.inputs.pppoe_pass }}'
+uci commit network
+exit 0
+EOF
+
     - name: Extend Driver
       if: env.EXTEND_DRIVER == 'true'
       run: |
         cd openwrt
-        cat $GITHUB_WORKSPACE/configs/Driver.config >> .config   # 合并 Driver 配置
+        cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
 
-    # 修改配置
     - name: Modify configuration
       run: |
         cd openwrt
-        cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config    # 合并 Standard.config
-        make defconfig                                    # 更新配置
-        sed -i '/CONFIG_DEFAULT_luci/d' .config           # 删除默认 luci
-        cat .config                                       # 输出查看
+        cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
+        make defconfig
+        sed -i '/CONFIG_DEFAULT_luci/d' .config
+        cat .config
 
-    # 下载依赖包
     - name: Download packages
       run: |
         cd openwrt
         make download -j$(nproc)
-        find dl -size -1024c -exec ls -l {} \;   # 列出小于1KB的包
-        find dl -size -1024c -exec rm -f {} \;  # 删除异常包
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
 
-    # 编译固件
     - name: Compile firmware
       id: compile
       run: |
         cd openwrt
         echo "$(nproc) thread compile"
-        make -j$(nproc) V=s || make -j4 V=s   # 多线程编译，失败降级
+        make -j$(nproc) V=s || make -j4 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV  # 设置 DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
 
     - name: Check space usage
       if: (!cancelled())
-      run: df -hT   # 检查磁盘空间
+      run: df -hT
 
-    # 上传 bin 目录（可选）
     - name: Upload bin directory
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
@@ -139,17 +141,15 @@ jobs:
         name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: openwrt/bin
 
-    # 整理固件文件
     - name: Organize files
       id: organize
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages   # 删除多余包目录
+        rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
-    # 上传固件
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
@@ -157,7 +157,6 @@ jobs:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
-    # Release 标签
     - name: Generate release tag
       id: tag
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
@@ -166,13 +165,11 @@ jobs:
         touch release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
-    # Release 描述文件
     - name: Generate release body
       if: steps.compile.outputs.status == 'success' && !cancelled()
       run: |
         echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
 
-    # 上传固件到 Release
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
@@ -182,4 +179,4 @@ jobs:
         name: ${{ env.OPNAME }}
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*   # 上传整理后的固件
+        files: ${{ env.FIRMWARE }}/*
