--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -67,7 +67,9 @@ jobs:
 
         echo "Disk after system cleanup:"
         df -hT
-
+  #-------------------------------------------------------------
+    - name: Check space usage
+      run: df -hT
     #-------------------------------------------------------------
     # 3. 克隆 OpenWrt 源码
     #-------------------------------------------------------------
@@ -86,7 +88,9 @@ jobs:
         ccache: 'true'
         mixkey: 'x86'
         prefix: 'openwrt'
-
+  #-------------------------------------------------------------
+    - name: Check space usage
+      run: df -hT
     #-------------------------------------------------------------
     # 5. feeds update/install
     #-------------------------------------------------------------
@@ -95,7 +99,9 @@ jobs:
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-
+  #-------------------------------------------------------------
+    - name: Check space usage
+      run: df -hT
     #-------------------------------------------------------------
     # 6. 自定义 feed 与脚本
     #-------------------------------------------------------------
@@ -161,7 +167,9 @@ EOF
         cd openwrt
         make download -j$(nproc)
         find dl -size -1024c -exec rm -f {} \;
-
+  #-------------------------------------------------------------
+    - name: Check space usage
+      run: df -hT
     #-------------------------------------------------------------
     # 12. 编译 OpenWrt 固件
     #-------------------------------------------------------------
